# Phys_Comp_II_group_2

./: Integrantes.txt  README.md
Clase/: Graph.ipynb  RCL.out  Shooting.h  a.out  aplicaciones_RCL.cpp  aplicaciones_confluent_hypergeometric.cpp  aplicaciones_potencial.cpp
Clase/Aplicaciones_RCL/: Epochs.txt  aplicaciones_RCL.cpp  send.py
Clase/aplicaciones_hypergeometric/: Epochs.txt  a.out  aplicaciones_confluent_hypergeometric.cpp  send.py
Clase/aplicaciones_potencial_esferas/: Epochs.txt  a.out  aplicaciones_potencial.cpp  send.py
Clase/implementacion_ejemplo_Burden/: Epochs.txt  a.out  ejemploBurden.cpp  send.py
ClaseA/: Shooting.cpp  a.out  ejemploBurden.cpp
ClaseA/.ipynb_checkpoints/: Graph-checkpoint.ipynb
ClaseA/Aplicacion1/: Epochs.txt  Graph.ipynb  ModShooting.cpp  ModShooting.h  Unicidad.cpp  a.out
ClaseA/Aplicacion2/: Anarmonico.cpp  Epochs.txt  Graph.ipynb  a.out
Parcial3/: a.out  main.cpp  shooting_completo.cpp
ParcialDavidG/Parcial1_1/: Circular.cpp  Circular.h  Espiral.cpp  Espiral.h  a.out  ejemploCircular.cpp  posiciónCircular.txt
ParcialDavidG/Parcial1_2/: Ahorcado.cpp  Ahorcado.h  a.out  jugarAhorcado.cpp  palabras
ParcialDavidG/Parcial1_3/: Jacobi.cpp  Jacobi.h  (+6 more)
Project/: Aplicación Actividad Radiactiva con GEANT4.pptx  GammaDec.cpp  a.out  decay.c  graph_decay.c  graph_decay.ipynb  monte_carlo.py  population.txt  rdecay_activity.cpp
Project/simulation/: CMakeLists.txt  action.cc  action.hh  construction.cc  construction.hh  generator.cc  generator.hh  physics.cc  physics.hh  sim.cc
tpm/: a.out  main.cpp  shooting.cpp
(+33 files in other folders)
